// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CameraComponentSnap should render as default correctly for perspective camera in viewing mode 1`] = `
<group
  name="CAMERA_COMPONENT_testRef"
>
  <perspectiveCamera
    aspect={1.7777777777777777}
    far={100}
    fov={60}
    near={0}
    position={
      Vector3 {
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
  >
    <meshBasicMaterial
      attach="material"
    />
  </perspectiveCamera>
</group>
`;

exports[`CameraComponentSnap should render correctly for orthographic camera 1`] = `
<group
  name="CAMERA_COMPONENT_testRef"
>
  <orthographicCamera
    bottom={-3}
    far={1000}
    left={-3}
    near={0}
    position={
      Vector3 {
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    right={3}
    top={3}
    zoom={1}
  >
    <meshBasicMaterial
      attach="material"
    />
  </orthographicCamera>
</group>
`;

exports[`CameraComponentSnap should render correctly for perspective camera 1`] = `
<group
  name="CAMERA_COMPONENT_testRef"
>
  <perspectiveCamera
    aspect={1.7777777777777777}
    far={100}
    fov={60}
    near={0}
    position={
      Vector3 {
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
  >
    <meshBasicMaterial
      attach="material"
    />
  </perspectiveCamera>
</group>
`;
